--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run format && babel ./lib --out-dir ./dist",
     "start": "npm run build && node dist/index.js",
     "dev": "nodemon --exec npm start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "nuxt",
