Add unit testing (mocha + chai) and test coverage (nyc).

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
   "presets": ["es2015"],
-  "plugins": []
+  "plugins": [
+    ["babel-plugin-root-import", [{
+      "rootPathPrefix": "~",
+      "rootPathSuffix": "lib"
+    }, {
+      "rootPathPrefix": "@",
+      "rootPathSuffix": "test"
+    }]],
+    "istanbul"
+  ]
 }
