--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,10 @@ yarn.lock
 #################
 dist
 
+# Istanbul (nyc) cache #
+########################
+.nyc_output
+
 # IDE/Text Editor Files #
 #########################
 *.sublime-project
