--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A simple, powerful static content generator for Nuxt.js sites.",
   "main": "dist/index.js",
   "scripts": {
-    "format": "standard --fix",
-    "build": "npm run format && babel ./lib --out-dir ./dist",
-    "start": "npm run build && node dist/index.js",
-    "dev": "nodemon --exec npm start",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "npm run build"
+    "format": "standard --fix --env mocha",
+    "test": "nyc mocha",
+    "coverage": "nyc check-coverage",
+    "clean": "rimraf dist && rimraf .nyc_output",
+    "build": "babel ./lib --out-dir ./dist",
+    "exec": "npm run format && npm run build && npm run test && node dist/index.js",
+    "start": "nodemon --exec npm run exec",
+    "prepare": "npm run format && npm run clean && npm run build && npm run test && npm run coverage"
   },
   "keywords": [
     "nuxt",
@@ -36,8 +38,16 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.1.2",
+    "babel-plugin-istanbul": "^4.1.5",
+    "babel-plugin-root-import": "^5.1.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "mocha": "^4.1.0",
     "nodemon": "^1.14.7",
+    "nyc": "^11.4.1",
+    "rimraf": "^2.6.2",
     "standard": "^10.0.3"
   },
   "standard": {
