--- a/package.json
+++ b/package.json
@@ -4,14 +4,35 @@
   "description": "A simple, powerful static content generator for Nuxt.js sites.",
   "main": "dist/index.js",
   "scripts": {
-    "format": "standard --fix --env mocha",
-    "test": "nyc mocha",
-    "coverage": "nyc check-coverage",
-    "clean": "rimraf dist && rimraf .nyc_output",
-    "build": "babel ./lib --out-dir ./dist",
-    "exec": "npm run format && npm run build && npm run test && node dist/index.js",
+    "preclean": "echo 'Cleaning build directories\n' | chalk magenta underline",
+    "clean": "(rimraf dist && rimraf .nyc_output) || (echo '\nClean failed! Fix errors and try again.\n' | chalk red && false)",
+    "postclean": "echo 'Build directories removed\n' && echo 'Complete!\n' | chalk cyan",
+    "preformat": "echo 'Linting and formatting code\n' | chalk magenta underline",
+    "format": "standard --fix --env mocha || (echo '\nLinting failed! Fix errors and try again.\n' | chalk red && false)",
+    "postformat": "echo 'No errors!\n' && echo 'Complete!\n' | chalk cyan",
+    "pretype": "echo 'Type checking code\n' | chalk magenta underline",
+    "type": "flow || (echo '\nType checking failed! Fix errors and try again.\n' | chalk red && false)",
+    "posttype": "echo '\nComplete!\n' | chalk cyan",
+    "prebuild": "echo 'Building module\n' | chalk magenta underline",
+    "build": "babel ./lib --out-dir ./dist || (echo '\nBuild failed! Fix errors and try again.\n' | chalk red && false)",
+    "postbuild": "echo '\nComplete!\n' | chalk cyan",
+    "pretest": "echo 'Running unit tests' | chalk magenta underline",
+    "test": "nyc mocha --reporter=list || (echo '\nUnit testing failed! Fix errors and try again.\n' | chalk red && false)",
+    "posttest": "echo '\nComplete!\n' | chalk cyan",
+    "precoverage": "echo 'Checking code coverage\n' | chalk magenta underline",
+    "coverage": "nyc check-coverage || (echo '\nCoverage check failed! Fix errors and try again.\n' | chalk red && false)",
+    "postcoverage": "echo 'Code coverage over 80%. Success!\n' && echo 'Complete!\n' | chalk cyan",
+    "generate": "npm run format && npm run type && npm run build && npm run test",
+    "premodule": "echo 'Executing module\n' | chalk magenta underline",
+    "module": "node dist/index.js || (echo '\nModule execution failed! Fix errors and try again.\n' | chalk red && false)",
+    "postmodule": "echo 'Complete!\n' | chalk cyan",
+    "preexec": "echo '\n------------------------------------------------------------------------\n                              Nukyll Module\n------------------------------------------------------------------------\n' | chalk cyan",
+    "exec": "npm run generate && npm run module",
+    "postexec": "echo 'Module ran successfully\n' | chalk green",
     "start": "nodemon --exec npm run exec",
-    "prepare": "npm run format && npm run clean && npm run build && npm run test && npm run coverage"
+    "preprepare": "echo '\n------------------------------------------------------------------------\n                             Prepare Nukyll\n------------------------------------------------------------------------\n' | chalk cyan",
+    "prepare": "npm run preprepare && npm run clean && npm run generate && npm run coverage && npm run postprepare",
+    "postprepare": "echo 'Module prepared for release\n' | chalk green"
   },
   "keywords": [
     "nuxt",
@@ -42,8 +63,12 @@
     "babel-plugin-root-import": "^5.1.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
+    "chalk-cli": "^4.0.0",
+    "eslint-plugin-flowtype": "^2.41.0",
+    "flow-bin": "^0.63.1",
     "mocha": "^4.1.0",
     "nodemon": "^1.14.7",
     "nyc": "^11.4.1",
@@ -51,6 +76,10 @@
     "standard": "^10.0.3"
   },
   "standard": {
-    "parser": "babel-eslint"
-  }
+    "parser": "babel-eslint",
+    "plugins": [
+      "flowtype"
+    ]
+  },
+  "dependencies": {}
 }
